# arpacik

./: Cargo.toml  README.md  arpacik.postman_collection.json  compose.yaml  example.env
api/: Cargo.toml
api/src/: error.rs  helper.rs  lib.rs  traits.rs
api/src/middleware/: auth.rs
api/src/route/: auth.rs  bin.rs  entry.rs  feed.rs  hello.rs  mod.rs  search.rs  statistics.rs  title.rs  today.rs  trends.rs
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs
entity/src/base/: downvote.rs  entry.rs  favorite.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  silenced_user.rs  title.rs  token.rs  upvote.rs  user.rs  vote.rs
migration/: Cargo.toml
migration/src/: helper.rs  lib.rs  m20220101_000001_init.rs
service/: Cargo.toml
service/src/: auth.rs  bin.rs  claims.rs  cookie.rs  entry.rs  error.rs  feed.rs  lib.rs  search.rs  statistics.rs  title.rs  today.rs  token.rs  trends.rs  user.rs  validation.rs
service/src/dto/: auth.rs  bin.rs  entry.rs  mod.rs  order.rs  pagination.rs  search.rs  statistics.rs  time.rs  title.rs  today.rs  trends.rs
sql/: init.sql
