[package]
name = "api"
version = "0.0.1"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
service = { path = "../service" }
anyhow = "1.0.81"
axum = "0.7.5"
dotenvy = "0.15.7"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
