[package]
name = "migration"
version = "0.0.1"
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
