[package]
name = "service"
version = "0.0.1"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
blake3 = "1.5.1"
chrono = "0.4.38"
entity = { path = "../entity" }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.61"
validator = { version = "0.18.1", features = ["derive"] }

[dependencies.sea-orm]
version = "0.12.15"
features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"]

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt"] }
